# sdrtop

./: .gitignore  Cargo.toml  README.md  ssh-test.txt
.obsidian/: workspace.json
dev_docs/bugs/: README.md
dev_docs/improvements/: README.md
docs/: CHANGELOG.md  Home.md  Roadmap.md
docs/bugs/: README.md  bug-001-iq-histogram-oob.md  bug-002-usbc-streaming-instability.md  bug-003-iq-histogram-utf8-slice.md  bug-004-comprehensive-audit.md  bug-005-multi-bug-audit.md  bug-006-spectrum-scale-waterfall-stale.md
docs/improvements/: README.md  imp-003-spectrum-waterfall-ui-fixes.md  imp-004-spectrum-display-overhaul.md  imp-005-spectrum-focus-tuning.md  imp-008-performance-overhaul.md  imp-009-waterfall-focus-panel.md
docs/phases/: Phase 1 - Device Discovery - Log.md  Phase 1 - Device Discovery - Steps.md  Phase 12d - Codebase Modularization - Steps.md  Phase 2 - Telemetry Polling - Log.md  Phase 2 - Telemetry Polling - Steps.md  Phase 3 - TUI Dashboard - Log.md  Phase 3 - TUI Dashboard - Steps.md  Phase 4 - Architecture Refactor - Log.md  Phase 4 - Architecture Refactor - Steps.md
src/: app.rs  config.rs  event.rs  fft.rs  main.rs  state.rs
src/app/: builder.rs  input.rs  mod.rs
src/hardware/: device.rs  ffi.rs  mod.rs  process.rs  sysfs.rs  traits.rs
src/signal/: dsp.rs  fft.rs  iq.rs  mod.rs
src/state/: acc.rs  iq.rs  lab.rs  mod.rs  observer.rs  radio.rs  signal.rs  spectrum.rs  (+4 more)
user_docs/: README.md  advanced.md  config.md  getting-started.md  hardware.md  keys.md  lab.md  screens.md  themes.md  tips-and-tricks.md  troubleshooting.md  whats-new.md
(+45 files in other folders)
