[package]
name = "sdrtop"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "sdrtop"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
toml  = "0.8"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
rustfft = "6"
num-complex = "0.4"

[build-dependencies]
pkg-config = "0.3"

[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"